--- a/Downloads/techsmvp-KaungFixed/src/main/resources/static/css/setting.css
+++ b/Downloads/techsmvp-KaungFixed/src/main/resources/static/css/setting.css
@@ -1,104 +1,288 @@
-.modal {
+p {
+  font-weight: 400;
+}
+/* span {
+  color: #666;
+  display: block;
+  padding: 0 0 5px;
+} */
+
+.form1 {
+  padding: 25px;
+  margin: 25px;
+  box-shadow: 0 2px 5px #f5f5f5;
+  background: #eee;
+}
+.input1,
+.textarea1 {
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ad2eb3;
+  border-radius: 5px;
+}
+.contact-form button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  background: #1c87c9;
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+}
+button:hover {
+  background: #2371a0;
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 18px;
+  padding: 9px;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+button.button {
+  background: none;
+  border-top: none;
+  outline: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: #02274a 1px solid;
+  padding: 0 0 3px 0;
+  font-size: 16px;
+  cursor: pointer;
+}
+button.button:hover {
+  border-bottom: #a99567 1px solid;
+  color: #a99567;
+}
+
+
+.select 
+{
+  background: #fff !important;
+  width: 90%;
+  height:50px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ad2eb3;
+  border-radius: 5px;
+  text-transform: uppercase;
+  box-shadow : none; 
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+}
+
+.select::-ms-expand {
     display: none;
-    position: fixed;
-    z-index: 8;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-  }
-  .modal-content {
-    margin: 50px auto;
-    border: 1px solid #999;
-    width: 60%;
-  }
+}
 
-  p {
-    font-weight: 400;
-  }
-  /* span {
-    color: #666;
-    display: block;
-    padding: 0 0 5px;
-  } */
+.selectm 
+{
+  background: #fff !important;
+  width: 90%;
+  height:150px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ad2eb3;
+  border-radius: 5px;
+  text-transform: uppercase;
+  box-shadow : none; 
+  -webkit-appearance: none;
+  -moz-appearance: none;
 
-  .form1 {
-    padding: 25px;
-    margin: 25px;
-    box-shadow: 0 2px 5px #f5f5f5;
-    background: #eee;
-  }
-  .input1,
-  .textarea1 {
-    width: 90%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ad2eb3;
-    border-radius: 5px;
-  }
-  .contact-form button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    background: #1c87c9;
-    font-size: 16px;
-    font-weight: 400;
-    color: #fff;
-  }
-  button:hover {
-    background: #2371a0;
-  }
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 18px;
-    padding: 9px;
-  }
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  button.button {
-    background: none;
-    border-top: none;
-    outline: none;
-    border-right: none;
-    border-left: none;
-    border-bottom: #02274a 1px solid;
-    padding: 0 0 3px 0;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  button.button:hover {
-    border-bottom: #a99567 1px solid;
-    color: #a99567;
-  }
+}
+
+.selectm::-ms-expand {
+    display: none;
+}
 
 
-  .select 
-  {
-    background-color: #fff;
-    width: 90%;
-    height:30px;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ad2eb3;
-    border-radius: 5px;
-    text-transform: uppercase;
+
+/* arrows */
+
+select.classic {
+  background-image:
+    linear-gradient(45deg, transparent 50%, blue 50%),
+    linear-gradient(135deg, blue 50%, transparent 50%),
+    linear-gradient(to right, skyblue, skyblue);
+  background-position:
+    calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px),
+    100% 0;
+  background-size:
+    5px 5px,
+    5px 5px,
+    2.5em 2.5em;
+  background-repeat: no-repeat;
+}
+
+select.classic:focus {
+  background-image:
+    linear-gradient(45deg, white 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, white 50%),
+    linear-gradient(to right, gray, gray);
+  background-position:
+    calc(100% - 15px) 1em,
+    calc(100% - 20px) 1em,
+    100% 0;
+  background-size:
+    5px 5px,
+    5px 5px,
+    2.5em 2.5em;
+  background-repeat: no-repeat;
+  border-color: grey;
+  outline: 0;
+}
+
+
+
+
+/* for image preview */
+
+.imagePreview {
+  width: 200px;
+  height: 200px;
+  background-position: center center;
+background-color:#fff;
+  background-size: cover;
+background-repeat:no-repeat;
+box-shadow:0px -3px 6px 2px rgba(0,0,0,0.2);
+}
+.btn-primary
+{
+display:block;
+border-radius:0px;
+box-shadow:0px 4px 6px 2px rgba(0,0,0,0.2);
+margin-top:-5px;
+}
+.imgUp
+{
+margin-bottom:15px;
+}
+
+.form-input input {
+  display:none;
+
+}
+.form-input label {
+  display:block;
+  margin-right: 120px;
+  line-height:50px;
+  text-align:center;
+  background:#ad2eb3;
+
+  color:#fff;
+  font-size:15px;
+  font-weight:600;
+  width: 80%;
+  border-radius:5px;
+  cursor:pointer;
+}
+
+.form-input img {
+  margin-left: 25%;
+  width: 150px;
+  height: 150px;
+  background-position: center center;
+  background-color:#fff;
+  background-size: cover;
+  background-repeat:no-repeat;
+  box-shadow:0px -3px 6px 2px rgba(0,0,0,0.2);
+  border-radius:50%
+}
+
+
+/* this is for settings*/
+.button-submit {
+background-color: #ad2eb3;
+border:none;
+border-radius: 5px;
+box-sizing: border-box;
+color: #FFFFFF;
+cursor: pointer;
+font-size: 14px;
+font-weight: 500;
+height: 40px;
+width: 120px;
+line-height: 20px;
+list-style: none;
+padding: 10px;
+position: relative;
+text-align: center;
+text-decoration: none;
+transition: color 100ms;
+vertical-align: baseline;
+margin-right: 5%;
+margin-top: 10%;
+}
+
+.button-submit:hover,
+.button-submit:focus {
+background-color: #616161;
+}
+
+.button-reset {
+background-color: #fff;
+border-radius: 5px;
+border: 1px solid #ad2eb3;
+box-sizing: border-box;
+color: #ad2eb3;
+cursor: pointer;
+font-size: 14px;
+font-weight: 500;
+height: 40px;
+width: 120px;
+line-height: 20px;
+list-style: none;
+padding: 10px;
+position: relative;
+text-align: center;
+text-decoration: none;
+transition: color 100ms;
+vertical-align: baseline;
+margin-top: 10%;
+}
+
+.button-reset:hover,
+.button-reset:focus {
+background-color: #616161;
+color: #fff;
+border: none;
+}
+
+.input2{
+  border-radius: 5px;
+  border: 1px solid #ad2eb3;
+  height: 40px;
+  width: 50%;
+  padding-bottom: 40px;
+  min-width: 150px;
+}
+
+.button-upload {
+  background-color: #ad2eb3;
+  border:none;
+  border-radius: 5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  width: 50%;
+  padding: 10px;
+  position: relative;
+  text-align: center;
+  min-width: 150px;
   }
   
-  .select::-ms-expand {
-      display: none;
+  .button-upload:hover,
+  .button-upload:focus {
+  background-color: #616161;
   }
-
-  
-
-
-
-
-  
